Cover full Branch Controller

--- a/APIApp/appsettings.json
+++ b/APIApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConn": "data source=SALMAN\\SQLEXPRESS; initial catalog=HDMS; TrustServerCertificate=True; Integrated Security=True;"
+  }
 }
