Add All Core feature

--- a/APIApp/appsettings.json
+++ b/APIApp/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DbConn": "data source=SALMAN\\SQLEXPRESS; initial catalog=HDMS; TrustServerCertificate=True; Integrated Security=True;"
+  },
+  "EmailSettings": {
+    "FromEmail": "chapcehagu@gmail.com",
+    "AppPassword": "tkec owpq igtn cpxw",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587
   }
 }
